# slackrope

./: Cargo.toml  Changes.md  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: cli.rs  environment.rs  logger.rs  main.rs  models.rs  utils.rs  weechat_connection.rs  weechat_health.rs  weechat_hotlist.rs  weechat_process.rs  weechat_slack.rs
