[package]
name = "weechat-hotlist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error-handling
anyhow = "1.0.72"
# cli
clap = { version = "4.3.19", features = ["derive"] }
# logging
env_logger = "0.10.0"
log = "0.4.19"
# system
sysinfo = "0.29.6"
# weechat api
weechat-relay-rs = "0.1.0"
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
